sass/modules/_site_header.scss
%tooltip {
  position: absolute;
  z-index: 9999;
  top: em(60);
  right: 0.83333em;
  width: em(200);
  padding: 0.5em;
  line-height: 1.5em;
  content: attr(title);
  font-family: $primary_font_family;
  font-size: 1em;
  text-shadow: 0 0 0 transparent;
  text-align: center;
  color: $white;
  background: transparentize(scale-color($alpha_color, $lightness: -80%), 0.2);

  @each $prefix in $prefix_defaults {
    #{$prefix}border-bottom-left-radius: em(8);
    #{$prefix}border-bottom-right-radius: em(8);
  }
}

.site_header {
  position: relative;
  height: em(60);
  margin-bottom: em(20);
  border-bottom: 1px solid scale-color($alpha_color, $lightness: -50%);
  background: $alpha_color_charlie;

  a {
    color: $white;
    line-height: em(60);
    text-shadow: 0 0 5px darken($alpha_color, 10%);

    &:hover {
      color: darken($alpha_color, 40%);
      text-shadow: 0 0 5px $white;

      &:after {
        @extend %tooltip;
        
        @media #{$mobile} {
          display: none;
        }
      }
    }
  }

  .logo {
    @extend %icon-font;

    position: relative;
    left: 15px;
    float: left;

    &:before {
      content: "\e001";
      font-size: 7.5em;
      line-height: 0.01;      
    }

    &:hover {
      &:after {
        top: em(60);
        width: em(240);
        margin-left: em(-10);
        left: 0;
      }
    }

    @media #{$mobile} {
      left: 5px;
    }
  }
}

.social_links {
  list-style: none;
  text-align: right;
  float: right;
  position: relative;

  > li {
    display: block;
    float:left;
    padding-right: em(15);
    line-height: em(1);
    position: relative;

    &:last-child {
      @extend %omega;
    }

    @media #{$mobile} {
      padding-right: em(8);
    }
  }

  img {
    @include border_radius($border-radius);
    display: block;
    margin-top: em(10);
  }

  > li:nth-last-child(2) {
    border-right: 1px solid darken($alpha_color, 5%);
    box-shadow: inset -1px 0px 0px 0px transparentize(white, 0.8);

    @media #{$mobile} {
      padding-right: em(12);
    }
  }
  > li:last-child {
    padding-left: em(16);

    @media #{$mobile} {
      padding-left: em(8);
    }
  }

  @media #{$mobile} {
    li:nth-child(2) {
      display:none;
    }
  }
}

.github {
  ul {
    display:none;
  }

  &:hover {
    background: scale-color($alpha_color, $lightness: -70%);

    ul {
      display: block;
    }
  }
}

#account_actions {
  @extend %tooltip;

  right: 0;
  padding: em(8) em(8);
  text-align: left;
  width: auto;
  min-width: em(220);
  max-width: em(340);
  background: transparentize(scale-color($alpha_color, $lightness: -80%), 0.2);

  @each $prefix in $prefix_defaults {
    #{$prefix}border-top-left-radius: 0;
    #{$prefix}border-top-right-radius: 0;
  }

  li {
    width: 100%;
    display: block;
  }

  li:before {
    font-size: 0.75em;
    margin-right: 0.5em;
  }

  a {
    &:hover {
      color: white;
      text-shadow: none;

      &:after {
        display: none;
      }
    }
  }
}

